chore: fix pagination overflowing
Fixes: #300

--- a/src/components/pagination/pagination.module.scss
+++ b/src/components/pagination/pagination.module.scss
@@ -1,6 +1,19 @@
 @import "../../styles/text_styles";
 @import "../../styles/utils";
 
+
+.srOnly {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
+}
+
 .pagination {
 	display: flex;
 	justify-content: center;
